<resources>
    <string name="app_name">Ecumeno</string>
    <string name="title_bible">Bible</string>
    <string name="title_reader">Reader</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_rosary">Rosary</string>
    <string name="title_prayers">Prayers</string>
    <string name="title_settings">Settings</string>
    <string name="notification_message_small">Don\'t forget about spiritual life!</string>
    <string name="notification_message">Dates today:%s\nFast level: %s</string>
    <string name="notification_message_lut">Dates today: %s</string>
    <string name="no_dates">none</string>
    <string name="hello">Peace be multiplied unto you!\n(Daniel 6:25)</string>
    <string name="onboarding">Welcome to the Ecumeno app. Your spiritual life is in your own hands, but we will try to help, even if we differ.\n\nPlease select your denomination (you can change your choice in the settings at any time):</string>
    <string name="finishOnBoard">Continue</string>
    <string name="chapter">Chapter</string>
    <string name="today">Today</string>
    <string name="decade">Decade</string>
    <string name="bead">Bead</string>
    <string name="notifications">Notifications</string>
    <string name="notification_time">Notification time</string>
    <string name="daily_notifications">Daily notifications</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="theme_nightmode">Dark</string>
    <string name="theme_daymode">Light</string>
    <string name="theme_system">System</string>
    <string name="language">Language</string>
    <string name="switch_rosary">Rosary prayer rule</string>
    <string name="reset">Reset</string>
    <string name="personalization">Personalization</string>
    <string name="confession">Denomination</string>
    <string name="confession_ort">Orthodoxy</string>
    <string name="confession_cat">Catholicism</string>
    <string name="confession_lut">Lutheranism</string>
    <string name="diptych">Diptych</string>
    <string name="confessor">Confessor\'s name</string>
    <string name="living_parents">Names of living parents</string>
    <string name="living_relatives">Names of living relatives</string>
    <string name="deceased_parents">Names of deceased parents</string>
    <string name="deceased_relatives">Names of deceased relatives</string>
    <string name="saints">Names of the Saints</string>
    <string name="fast_no_fast">No fast</string>
    <string name="fast_continuous_week">Continuous week, no fast</string>
    <string name="fast_xerophagy">Xerophagy</string>
    <string name="fast_fish">Fish</string>
    <string name="fast_no_oil">No oil</string>
    <string name="fast_strict">Fast</string>
    <string name="fast_oil_allowed">Oil allowed</string>
    <string name="abstinence">Abstinence</string>
    <string name="christmas">Christmas</string>
    <string name="forgiveness_sunday">Forgiveness Sunday</string>
    <string name="lazarus_saturday">Lazarus Saturday</string>
    <string name="palm_sunday_greatfeast">Palm Sunday</string>
    <string name="triumph_of_orthodoxy">Triumph of Orthodoxy</string>
    <string name="reserved_holy_monday">Holy Monday</string>
    <string name="reserved_holy_tuesday">Holy Tuesday</string>
    <string name="reserved_holy_wednesday">Holy Wednesday</string>
    <string name="reserved_holy_thursday">Holy Thursday</string>
    <string name="reserved_holy_friday">Holy Friday</string>
    <string name="reserved_holy_saturday">Holy Saturday</string>
    <string name="reserved_easter_monday">Easter Monday</string>
    <string name="reserved_easter_tuesday">Easter Tuesday</string>
    <string name="reserved_easter_wednesday">Easter Wednesday</string>
    <string name="reserved_easter_thursday">Easter Thursday</string>
    <string name="reserved_easter_friday">Easter Friday</string>
    <string name="reserved_easter_saturday">Easter Saturday</string>
    <string name="thomas_sunday">Thomas Sunday</string>
    <string name="ascension_of_the_lord_greatfeast">Ascension of the Lord</string>
    <string name="pentecost_greatfeast">Pentecost</string>
    <string name="day_of_the_holy_spirit">Day of the Holy Spirit</string>
    <string name="day_of_the_holy_trinity_greatfeast">Day of the Holy Trinity</string>
    <string name="universal_memorial_saturday">Universal Memorial Saturday</string>
    <string name="lent_saturday_2_memorial">Saturday of the 2nd Week of Great Lent (Memorial Saturday)</string>
    <string name="lent_saturday_3_memorial">Saturday of the 3nd Week of Great Lent (Memorial Saturday)</string>
    <string name="lent_saturday_4_memorial">Saturday of the 4nd Week of Great Lent (Memorial Saturday)</string>
    <string name="lent_saturday_5">Saturday of Akathist</string>
    <string name="radonitsa_memorial">Radonitsa</string>
    <string name="trinity_saturday_memorial">Trinity Saturday</string>
    <string name="demetrius_saturday_memorial">Demetrius Saturday</string>
    <string name="circumcision_of_the_lord">Circumcision of the Lord</string>
    <string name="theophany_lord">Feast of the Baptism of the Lord</string>
    <string name="presentation_of_the_lord">Presentation of the Lord</string>
    <string name="annunciation_of_the_most_holy_theotokos">Annunciation of the Most Holy Theotokos</string>
    <string name="memorial_day_for_fallen_soldiers">Memorial Day for Fallen Soldiers</string>
    <string name="nativity_of_john_the_baptist">Nativity of John the Baptist</string>
    <string name="feast_of_saints_peter_and_paul">Feast of Saints Peter and Paul</string>
    <string name="transfiguration_of_the_lord">Transfiguration of the Lord</string>
    <string name="dormition_of_the_most_holy_theotokos">Dormition of the Most Holy Theotokos</string>
    <string name="beheading_of_john_the_baptist">Beheading of John the Baptist</string>
    <string name="nativity_of_the_most_holy_theotokos">Nativity of the Blessed Virgin Mary</string>
    <string name="exaltation_of_the_holy_cross_lord">Exaltation of the Holy Cross</string>
    <string name="protection_of_the_most_holy_theotokos">Protection of the Most Holy Theotokos</string>
    <string name="entrance_of_the_most_holy_theotokos_into_the_temple">Entrance of the Most Holy Theotokos into the Temple</string>
    <string name="easter">The Bright Resurrection of Christ. Easter</string>
    <string name="john_the_apostle">Apostle and Evangelist John the Theologian</string>
    <string name="ash_wednesday">Ash wednesday</string>
    <string name="reserved_divine_mercy_sunday">Divine Mercy Sunday</string>
    <string name="corpus_christi_greatfeast">Feast of Corpus Christi</string>
    <string name="reserved_advent_1_sunday">First Sunday of Advent</string>
    <string name="reserved_advent_2_sunday">Second Sunday of Advent</string>
    <string name="reserved_advent_3_sunday">Third Sunday of Advent</string>
    <string name="reserved_advent_4_sunday">Fourth Sunday of Advent</string>
    <string name="solemnity_of_mary">Solemnity of Mary, Mother of God</string>
    <string name="chair_of_peter">Feast of the Chair of Saint Peter</string>
    <string name="philip_and_james">Saint Philip and James, Apostles</string>
    <string name="matthias">Saint Matthias, Apostle</string>
    <string name="thomas">Saint Thomas, Apostle</string>
    <string name="lawrence">Saint Lawrence, Deacon and Martyr</string>
    <string name="all_souls">All Souls Day</string>
    <string name="dedication_lateran_basilica_lord">The Dedication of the Lateran Basilica</string>
    <string name="immaculate_conception">The Immaculate Conception of the Blessed Virgin Mary</string>
    <string name="confession_of_peter">Confession of Saint Peter</string>
    <string name="augsburg_confession">Presentation of the Augsburg Confession</string>
    <string name="reformation_day">Reformation Day</string>
    <string name="christmas_vigil">Vigil of the Nativity of the Lord</string>
    <string name="epiphany">The Epiphany of the Lord</string>
    <string name="paul_conversion">Conversion of Saint Paul</string>
    <string name="joseph">Saint Joseph</string>
    <string name="mark">Saint Mark, Evangelist</string>
    <string name="visitation">The Visitation of the Blessed Virgin Mary</string>
    <string name="barnabas">Saint Barnabas, Apostle</string>
    <string name="magdalene">Saint Mary Magdalene</string>
    <string name="james">Saint James, Apostle</string>
    <string name="assumption">The Assumption of the Blessed Virgin Mary</string>
    <string name="mary_virgin">Saint Mary, Mother of our Lord</string>
    <string name="bartholomew">Saint Bartholomew, Apostle</string>
    <string name="matthew">Saint Matthew, Apostle and Evangelist</string>
    <string name="archangels">Saints Michael, Gabriel, and Raphael, Archangels</string>
    <string name="luke">Saint Luke, Evangelist</string>
    <string name="sumon_jude">Saints Simon and Jude, Apostles</string>
    <string name="all_saints">All Saints day</string>
    <string name="andrew">Saint Andrew, Apostle</string>
    <string name="stephen">Saint Stephen, The First Martyr</string>
    <string name="innocents">The Holy Innocents, Martyrs</string>
    <string name="jesus_heart_greatfeast">The Most Sacred Heart of Jesus</string>
    <string name="mary_heart_memorial">The Immaculate Heart of the Blessed Virgin Mary</string>
    <string name="jesus_king_greatfeast">Our Lord Jesus Christ, King of the Universe</string>
    <string name="holy_family_lord">The Holy Family of Jesus, Mary and Joseph</string>
    <string name="rosary_mystery">Mysteries</string>
    <string name="rosary_mystery_joyful">Joyful (Mo, Sa)</string>
    <string name="rosary_mystery_luminous">Luminous (Th)</string>
    <string name="rosary_mystery_sorrowful">Sorrowful (Tu, Fr)</string>
    <string name="rosary_mystery_glorious">Glorious (We, Su)</string>
    <string name="rosary_creed">I believe in God the Father almighty, Creator of heaven and earth. And in Jesus Christ, His only Son, our Lord, Who was conceived by the Holy Spirit, born of the Virgin Mary, suffered under Pontius Pilate, was crucified, died, and was buried. He descended into hell; the third day He rose again from the dead; He ascended into heaven, and sits at the right hand of God the Father almighty, from thence He shall come to judge the living and the dead. I believe in the Holy Spirit, the holy Catholic Church, the communion of saints, the forgiveness of sins, the resurrection of the body and life everlasting. Amen.</string>
    <string name="rosary_our_father">Our Father who art in heaven, hallowed be thy name. Thy kingdom come. Thy will be done on earth, as it is in heaven. Give us this day our daily bread, and forgive us our trespasses, as we forgive those who trespass against us, and lead us not into temptation, but deliver us from evil.</string>
    <string name="rosary_hail_mary">Hail, Mary, full of grace, the Lord is with thee. Blessed art thou amongst women and blessed is the fruit of thy womb, Jesus. Holy Mary, Mother of God, pray for us sinners, now and at the hour of our death. Amen.</string>
    <string name="rosary_glory">Glory be to the Father and to the Son and to the Holy Spirit, as it was in the beginning is now, and ever shall be world without end. Amen.</string>
    <string name="rosary_fatima">O my Jesus, forgive us, save us from the fire of hell. Lead all souls to Heaven, especially those who are most in need.</string>
    <string name="rosary_jesus">Lord Jesus Christ, Son of God, have mercy on me, a sinner.</string>
    <string name="fralsarkransen_first">You are immense, You are near, You are the light and I am Yours. </string>
    <string name="fralsarkransen_second">At each oblong bead you may either rest in silence, or pray:\nI give away my loneliness. I receive that I am Yours.</string>
</resources>