<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_calendar" />
    <item
        android:id="@+id/bible_graph"
        android:icon="@drawable/ic_bible"
        android:title="@string/title_bible" />
    <item
        android:id="@+id/prayers_graph"
        android:icon="@drawable/ic_prayer"
        android:title="@string/title_prayers" />
    <item
        android:id="@+id/navigation_rosary"
        android:icon="@drawable/ic_rosary"
        android:title="@string/title_rosary" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
</menu>