<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.uvpv521.calendar.ui.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.uvpv521.calendar.ui.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_rosary"
        android:name="com.uvpv521.calendar.ui.RosaryFragment"
        android:label="@string/title_rosary"
        tools:layout="@layout/fragment_rosary" />

    <fragment
        android:id="@+id/navigation_bible"
        android:name="com.uvpv521.calendar.ui.BooksFragment"
        android:label="@string/title_bible"
        tools:layout="@layout/fragment_books">
        <argument android:name="dbName" app:argType="string" android:defaultValue="bible.db" />
        <action android:id="@+id/action_books_to_reader" app:destination="@id/readerFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_prayers"
        android:name="com.uvpv521.calendar.ui.BooksFragment"
        android:label="@string/title_prayers"
        tools:layout="@layout/fragment_books">
        <argument android:name="dbName" app:argType="string" android:defaultValue="prayers_ort.db" />
        <action android:id="@+id/action_books_to_reader" app:destination="@id/readerFragment" />
    </fragment>

    <fragment
        android:id="@+id/readerFragment"
        android:name="com.uvpv521.calendar.ui.ReaderFragment"
        android:label="@string/title_reader" >
        <argument
            android:name="dbName"
            app:argType="string" />
        <argument
            android:name="number"
            app:argType="integer" />
    </fragment>

</navigation>